manifests/service.yaml
  kind: Service
  apiVersion: v1
  metadata:
    name: hellosvc
    namespace: default
  spec:
    selector:
      app: helloworld
    ports:
    - port: 80
      targetPort: 6000
      name: http
